# odm_kafka_bridge

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: config.toml  example.env
odm_kafka_bridge/: bridge.py  cli.py  config.toml  example.env  kafka_client.py  kafka_producer.py  odm_client.py  producer.py
odm_kafka_bridge/config/: config.toml  example.env
src/odm_kafka_bridge/: bridge.py  cli.py  kafka_client.py  odm_client.py
test/: test_consumer.py
tests/: conftest.py  docker-compose.yml  local_kafka.py  mock_consumer.py  mock_kafka_consumer.py  test_kafka_producer.py  test_producer.py
